<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flexin</string>
    <string name="HomeActivityTitleString">Equipment</string>
    <string name="loading">Loading...</string>
    <string name="intro_message"></string>
    <string name="error">Error</string>
    <string name="no_nfc">No NFC found on this device</string>
    <string name="nfc_disabled">NFC is not enabled. Please go to the wireless settings to enable it.</string>
    <string name="menu_main_clear_title">Clear all</string>
    <string name="menu_main_copy">Copy IDs</string>
    <string name="menu_copy_hex">Hex</string>
    <string name="menu_copy_reversed_hex">Reversed hex</string>
    <string name="menu_copy_dec">Dec</string>
    <string name="menu_copy_reversed_dec">Reversed dec</string>
    <string name="nothing_scanned">Nothing scanned yet</string>
    <string name="connectionLabel">Connecter vous avec votre carte de l\'université</string>
    <string name="NoUserConnection">Ne pas se connecter</string>
    <string name="searchLabel">Search</string>
    <string name="cancel">Annuler</string>
    <string name="searchTextDialogTitle">Recherche:</string>
    <string name="materielNotFoundError">Le matériel n\'existe pas dans la base données</string>
    <string name="etatNotFilled">Veuillez remplir l\'état!</string>
    <string name="emprunter">Emprunter</string>
    <string name="rendre">Rendre</string>
    <string name="connexion">Se connecter</string>
    <string name="guest">Invité</string>
    <string name="connexionModeText">Choisissez votre mode de connexion:</string>
    <string name="welcomeMessageText">WELCOME TO FLEXIN !</string>
    <string name="scanBarCodeTitle">Scanner Code Barre</string>
    <string name="scanNFCTitle">Scanner NFC</string>
    <string name="authentificationMessage">AUTHENTICATION .. En attente de scan ...</string>
    <string name="scanMessage">AUTHENTICATION .. En attente de scan ...</string>
    <string name="reference">Reference :</string>
    <string name="nom">Nom:</string>
    <string name="description">Description:</string>
    <string name="plateforme">Plateforme:</string>
    <string name="etat">État:</string>
    <string name="etatRendreLabel">Etat du materiel a rendre :</string>
    <string name="connect">Se connecter</string>
    <string name="username">Username</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="changeconnect">Changer d\'utilisateur</string>
    <string name="errorConnection">Problème de connexion</string>
</resources>